# weesh

./: Procfile  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 5061072301f4_first_migration.py
tests/: test_shorterly.py
wee/: __main__.py
wee/database/: database.py  models.py
weesh/: __main__.py  config.py
weesh/database/: database.py  models.py
